--- a/Contact.css
+++ b/Contact.css
@@ -49,7 +49,7 @@ font-family:'Philosopher', sans-serif;
 font-size:1.5 em;
 padding:5px,0,0,0;
 margin:10px 10px 10px 10px;
-color:red;
+text-color:red;
 }
 
 
