--- a/trial 2.css
+++ b/trial 2.css
@@ -59,6 +59,7 @@ margin: 10px 0 0 15px;
 font-family:'Philosopher', sans-serif;
 display:inline-block;
 font-size:1.5 em;
+color:red;
 }
 .mda {
 display:block;
