--- a/trial.css
+++ b/trial.css
@@ -4,7 +4,7 @@ h1{
 text-align:center;
 font-family: 'Dancing Script', cursive;
 font-type:normal;
-color:#666;
+color:black;
 margin:10px auto;
 display:block;
 }
