--- a/trial.css
+++ b/trial.css
@@ -131,7 +131,7 @@ color:#708090
 footer{
 text-align:center;
 clear:both;
-color:#2E8B57;
+color:#FFFACD;
 font-size:1.5em;
 font-family: 'Philosopher', cursive;
 margin:10px auto;
